# instrument-package-template

./: .-template.yml  .gitignore  README.md  README.rst  azure-pipelines.yml  cookiecutter.json  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: build_package.yml  deploy_example.yml  greetings.yml
docs/: conf.py  index.rst
{{ cookiecutter.package_name }}/: README.rst  setup.cfg  setup.py  tox.ini
{{ cookiecutter.package_name }}/docs/: conf.py  index.rst
{{ cookiecutter.package_name }}/{{ cookiecutter.module_name }}/: __init__.py
