[metadata]
name = packagename
author = Jane Doe
author_email = a@b
license = BSD 3-Clause
license_file = LICENSE.rst
url = http:google.com
description = Does useful things.
long_description = file: README.rst

[options]
zip_safe = False
packages = find:
python_requires = >=3.8
setup_requires = setuptools_scm
install_requires = numpy


[options.entry_points]
console_scripts =
    astropy-package-template-example = packagename.example_mod:main


[options.extras_require]
test =
    pytest
    pytest-astropy
    pytest-cov
docs =
    sphinx
    sphinx-automodapi
    towncrier

[options.package_data]
packagename = data/*

[tool:pytest]
testpaths = "packagename" "docs"
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst
remote_data_strict = True

[coverage:run]
omit =
  packagename/__init*
  packagename/conftest.py
  packagename/*setup_package*
  packagename/tests/*
  packagename/*/tests/*
  packagename/extern/*
  packagename/version*
  */packagename/__init*
  */packagename/conftest.py
  */packagename/*setup_package*
  */packagename/tests/*
  */packagename/*/tests/*
  */packagename/extern/*
  */packagename/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
